filestruct/test_data/bad_code/enum.stderr
error: FromDir only supports structs
 --> test_data/bad_code/enum.rs
  |
  |     enum F {
  |          ^
